option('tests', type: 'feature', description: 'Build tests.')
option(
    'fru-device',
    type: 'boolean',
    description: 'Build fru-device VPD parser.',
)
option(
    'fru-device-resizefru',
    value: false,
    type: 'boolean',
    description: 'Allow FruDevice to resize FRU areas.',
)
option(
    'fru-device-16bitdetectmode',
    type: 'combo',
    choices: ['MODE_1', 'MODE_2'],
    value: 'MODE_1',
    description: 'Different modes to detect 16-bit address EEPROM devices. MODE_1 is current and default mode.',
)
option(
    'devicetree-vpd',
    type: 'boolean',
    description: 'Build device-tree VPD parser',
)
option(
    'validate-json',
    type: 'boolean',
    value: true,
    description: 'Run JSON schema validation during the build.',
)
option(
    'entity-manager-cache-configuration',
    type: 'boolean',
    value: true,
    description: 'Cache the current configuration to support new-device detection. This option can be set to false for development, which will force re-parsing of configuration.',
)
option(
    'compatible-hardware',
    type: 'string',
    value: '',
    description: 'Space-separated list of which hardware should be supported. Install every configuration by default.',
)
