option('tests', type: 'feature', description: 'Build tests.')
option(
    'fru-device',
    type: 'boolean',
    description: 'Build fru-device VPD parser.',
)
option(
    'fru-device-update-property',
    type: 'combo',
    choices: ['asset_only', 'all'],
    value: 'all',
    description: 'Enable updating FRU properties via D-BUS. Choose "asset_only" to update only asset properties, or "all" to update all properties.',
)
option(
    'fru-device-resizefru',
    value: true,
    type: 'boolean',
    description: 'Allow FruDevice to resize FRU areas.',
)
option(
    'fru-device-16bitdetectmode',
    type: 'combo',
    choices: ['MODE_1', 'MODE_2'],
    value: 'MODE_1',
    description: 'Different modes to detect 16-bit address EEPROM devices. MODE_1 is current and default mode.',
)
option(
    'fru-device-maxretries',
    type: 'integer',
    value: 0,
    description: 'Maximum number of retries for I2C device discovery.',
)
option(
    'fru-device-retrydelay',
    type: 'integer',
    value: 5,
    description: 'Delay in seconds between retries for I2C device discovery.',
)
option(
    'devicetree-vpd',
    type: 'boolean',
    description: 'Build device-tree VPD parser',
)
option(
    'validate-json',
    type: 'boolean',
    value: true,
    description: 'Run JSON schema validation during the build.',
)
option(
    'runtime-validate-json',
    type: 'boolean',
    value: false,
    description: 'Run JSON schema validation at runtime.',
)
option(
    'gpio-presence',
    type: 'boolean',
    value: true,
    description: 'Build gpio presence daemon',
)
option(
    'new-device-detection',
    type: 'boolean',
    value: true,
    description: 'Cache the current configuration to support new-device detection. This option can be set to false for development, which will force re-parsing of configuration.',
)
