option(
    'tests', type: 'feature', description: 'Build tests.',
)
option(
    'fru-device', type: 'boolean', description: 'Build fru-device.',
)
option(
    'fru-device-resizefru', value : false, type: 'boolean', description: 'Allow FruDevice to resize FRU areas.',
)
option(
    'validate-json', type: 'boolean', value: true, description: 'Run JSON schema validation during the build.',
)
option(
    'install-configuration-files', type: 'boolean', value: true, description: 'Install all configuration files',
)

